Fixes navbar centering + reduces spacing

--- a/public/main.css
+++ b/public/main.css
@@ -3,7 +3,7 @@ body, html {
 }
 
 body{
-	margin: 0;
+    margin: 0;
     text-align: center;
     background: #282828;
     background: -moz-linear-gradient(top, rgba(40, 40, 40, 1) 0%, rgba(74, 74, 74, 1) 100%);
@@ -16,7 +16,8 @@ body{
 }
 
 .spacing{
-    padding-left: 50px;
+    padding-left: 23px;
+    padding-right: 23px;
 }
 
 .spacing-icon{
@@ -27,21 +28,21 @@ body{
     font-size: 0.8em; !important;
 }
 .center_div {
-	align-items: center;
-	display: flex;
-	justify-content: center;
-	margin-top: 60px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    margin-top: 60px;
 }
 
 .navbar .navbar-nav {
-  display: inline-block;
-  float: none;
-  vertical-align: top;
-  font-size: 23px;
+    display: inline-block;
+    float: none;
+    vertical-align: top;
+    font-size: 23px;
 }
 
 .navbar .navbar-collapse {
-  text-align: center;
+    text-align: center;
 }
 
 #img_center {
@@ -50,16 +51,16 @@ body{
 }
 
 .alert {
-	margin-bottom: 10px;
-	padding: 10px 10px 10px 10px;
+    margin-bottom: 10px;
+    padding: 10px 10px 10px 10px;
 }
 .itemname {
-	font-size: 22px;
+    font-size: 22px;
 }
 .float_val {
-	font-size: 17px;
+    font-size: 17px;
 }
 .progress {
-  position: relative;
-  overflow: visible;
+    position: relative;
+    overflow: visible;
 }
